<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/edit_alarm_scrollView"
            tools:background="#1F2F3F"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/edit_alarm_holder"
            android:padding="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/edit_alarm_time"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="7:00"
                android:textSize="@dimen/normal_time_text_size"/>

        <LinearLayout
                android:id="@+id/edit_alarm_days_holder"
                android:orientation="horizontal"
                android:layout_below="@id/edit_alarm_time"
                android:layout_marginVertical="@dimen/small_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:id="@+id/edit_alarm_depart_time_holder"
                android:layout_below="@id/edit_alarm_days_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/edit_alarm_depart_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_time"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_access_time"
                    android:drawablePadding="@dimen/medium_margin"
                    android:paddingHorizontal="@dimen/tiny_margin"
                    android:paddingVertical="@dimen/medium_margin"
                    android:layout_alignParentStart="true" />

            <TextView
                    android:id="@+id/edit_alarm_depart_time"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/small_time_text_size"
                    android:layout_marginEnd="@dimen/medium_margin"
                    tools:text="8:00"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/edit_alarm_from_holder"
                android:layout_below="@id/edit_alarm_depart_time_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/edit_alarm_from_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_home"
                    android:layout_marginHorizontal="@dimen/tiny_margin"
                    android:layout_alignTop="@id/edit_alarm_from_address"
                    android:layout_alignBottom="@id/edit_alarm_from_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/edit_alarm_from_address"
                    android:hint="@string/from_hint"
                    android:maxLines="1"
                    android:textColorHint="@color/textColorHint"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_toEndOf="@id/edit_alarm_from_image"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/edit_alarm_to_holder"
                android:layout_below="@id/edit_alarm_from_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/edit_alarm_to_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_work"
                    android:layout_marginHorizontal="@dimen/tiny_margin"
                    android:layout_alignTop="@id/edit_alarm_to_address"
                    android:layout_alignBottom="@id/edit_alarm_to_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/edit_alarm_to_address"
                    android:hint="@string/to_hint"
                    android:maxLines="1"
                    android:textColorHint="@color/textColorHint"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_toEndOf="@id/edit_alarm_to_image"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/edit_alarm_vibrate_holder"
                android:layout_below="@id/edit_alarm_to_holder"
                android:paddingEnd="@dimen/small_margin"
                android:paddingVertical="@dimen/medium_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/edit_alarm_vibrate"
                    android:drawableStart="@drawable/ic_vibration"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/vibrate"
                    android:paddingHorizontal="@dimen/tiny_margin"
                    android:textColor="@color/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/edit_alarm_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bell"
                android:drawablePadding="@dimen/medium_margin"
                android:paddingHorizontal="@dimen/tiny_margin"
                android:paddingVertical="@dimen/medium_margin"
                android:textColor="@color/textColor"
                android:textSize="@dimen/normal_text_size"
                tools:text="Default alarm"
                android:layout_below="@id/edit_alarm_vibrate_holder"/>

        <ImageView
                android:id="@+id/edit_alarm_label_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_alignTop="@id/edit_alarm_label"
                android:layout_alignBottom="@id/edit_alarm_label"
                android:layout_marginHorizontal="@dimen/tiny_margin"
                android:src="@drawable/ic_label"
                android:layout_below="@id/edit_alarm_sound"/>

        <EditText
                android:id="@+id/edit_alarm_label"
                android:layout_below="@id/edit_alarm_sound"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/tiny_margin"
                android:layout_toEndOf="@id/edit_alarm_label_image"
                android:hint="@string/label"
                android:textColorHint="@color/textColorHint"
                android:textColor="@color/textColor"
                android:maxLines="1"
                android:textSize="@dimen/normal_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </RelativeLayout>

</ScrollView>